// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar should render default correctly 1`] = `
<div class="fx-notice-bar type--default">
  <!--v-if-->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">title</div>
  </div>
  <!--v-if-->
</div>
`;

exports[`NoticeBar should render prop leftIcon="SoundOutlined" correctly 1`] = `
<div class="fx-notice-bar type--default">
  <div class="fx-notice-bar_left-icon">
    <icon-stub icon="SoundOutlined" spin="false" size="0" width="0" height="0"></icon-stub>
  </div>
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">title</div>
  </div>
  <!--v-if-->
</div>
`;

exports[`NoticeBar should render prop mode="clickable" correctly 1`] = `
<div class="fx-notice-bar type--default">
  <!--v-if-->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">title</div>
  </div>
  <div class="fx-notice-bar_right-icon">
    <icon-stub icon="RightOutlined" spin="false" size="0" width="0" height="0"></icon-stub>
  </div>
</div>
`;

exports[`NoticeBar should render prop mode="closable" correctly 1`] = `
<div class="fx-notice-bar type--default">
  <!--v-if-->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">title</div>
  </div>
  <div class="fx-notice-bar_right-icon">
    <icon-stub icon="CloseOutlined" spin="false" size="0" width="0" height="0"></icon-stub>
  </div>
</div>
`;
